--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
     "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.511.0",
     "next": "15.4.6",
     "next-seo": "^6.6.0",
