--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "next-seo": "^6.6.0",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
+    "node-fetch": "^3.3.2",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
     "puppeteer": "^24.16.1",
@@ -71,6 +74,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.10",
+    "@types/pdfkit": "^0.17.2",
     "@types/raf": "^3.4.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
